change indent to 2 spaces instead of 4